# cellm

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  README.md  backup.README copy.md  convert_shards.py  debug_tokenizer_diff.py  inspect_model.rs  paper.md  references.md  test_convert.py  test_keys.py  test_keys2.py
bindings/ios/: project.yml
bindings/ios/CellmDemo/: CellmDemoApp.swift  CellmFFI.swift  ChatView.swift  DecodeStreamScheduler.swift  GenerationSettingsSheet.swift  Info.plist  LLMView.swift  LaunchScreen.storyboard  ModelDataProcessor.swift  ModelsView.swift  README.md  RemoteAssets.swift  VLMView.swift
bindings/ios/CellmDemo.xcodeproj/: project.pbxproj
bindings/ios/CellmDemo.xcodeproj/xcshareddata/xcschemes/: CellmDemo.xcscheme
bindings/kotlin/: build.gradle
bindings/swift/: Package.swift
bindings/swift/CellmFFI.xcframework/: Info.plist
bindings/swift/CellmFFI.xcframework/ios-arm64-simulator/Headers/: cellm.h
bindings/swift/CellmFFI.xcframework/ios-arm64/Headers/: cellm.h  module.modulemap
bindings/swift/CellmFFI.xcframework/macos-arm64/Headers/: cellm.h
bindings/swift/Sources/CellmSDK/: Exports.swift
bindings/swift/Sources/CellmSmoke/: main.swift
brain/: inspect_08b.rs
crates/cellm-cache/: Cargo.toml
crates/cellm-cache/examples/: bench_attn.rs
crates/cellm-cache/src/: allocator.rs  error.rs  eviction.rs  kvcache.rs  lib.rs  pagetable.rs
crates/cellm-cache/tests/: metal_gqa_parity.rs
crates/cellm-core/: Cargo.toml
crates/cellm-core/src/: arena.rs  backend.rs  dtype.rs  error.rs  kv_cache.rs  lib.rs  shape.rs  storage.rs  tensor.rs
crates/cellm-kernels/: Cargo.toml
crates/cellm-kernels/src/: cpu.rs  cpu_kernels.rs  lib.rs  metal.rs  metal_graph.rs  vulkan.rs
crates/cellm-kernels/tests/: metal_parity.rs
crates/cellm-model/: Cargo.toml
crates/cellm-model/examples/: inspect_shapes.rs
crates/cellm-model/src/: cellm_file.rs  gemma.rs  gemma_graph.rs  granite.rs  lfm.rs  lib.rs  llama.rs  llama_graph.rs  qwen.rs  qwen_new_top.rs
crates/cellm-scheduler/: Cargo.toml
crates/cellm-scheduler/src/: lib.rs  queue.rs  rr.rs  session.rs  thermal.rs
crates/cellm-sdk/: Cargo.toml  build.rs
crates/cellm-sdk/src/: ffi.rs  lib.rs  vlm.rs
docs/: LFM_Metal_Acceleration.md  README.md  audio-inference.md  bonsai_1bit_analysis.md  cellm-vlm-sequence.md  convert-quantized-models.md  data_flow.md  format.md  gemma-4-E2B-it-int4-aggr-v2-README.md  gemma3_mixed_quantization_rationale.md  gemma4_10gb_to_3_4gb_mobile_journey.md  index.html  inference_graph.md  inference_optimizations.md  lesson.group-qk.md  metal_inference_fix.md  mobile-dataflow.md  models.md  paged-kv-cache-foundation.md  paper.md  phase2-foundation.md  project_architecture.md  quantization_architecture.md  qwen25_cellm_working.md  qwen3.5-quantization.md  qwen3_5-deltanet.md  scheduler.md  turboquant_dataflow.md  vlm-smolvlm-onnx.md
docs/benchmarks/: README.md  history.md  latest_llm_runs_apr03_2026.csv  status_report_20260412.md
docs/benchmarks/runs/: full_model_matrix_20260426_130318.csv  full_model_matrix_20260426_130636.csv  full_model_matrix_20260426_130636_summary.md  gemma4_mobile_profile_20260409_230332.csv  gemma4_mobile_profile_20260409_230332_summary.md  gemma4_mobile_profile_20260409_230513.csv  gemma4_mobile_profile_20260409_230513_summary.md  gemma4_mobile_profile_20260409_230617.csv  gemma4_mobile_profile_20260409_230617_summary.md  gemma4_mobile_profile_20260409_230904.csv  gemma4_mobile_profile_20260409_230904_summary.md  llama32_gguf_compare_20260403_202656.csv  llama32_gguf_compare_20260403_202656_summary.md  llama32_gguf_compare_20260403_202845.csv  llama32_gguf_compare_20260403_202845_summary.md
docs/lessons/: kernel_concepts.md
models/: README.md  qwen3.5-0.8b-int4-textonly.cellm  smollm2-135m-int8.cellm  smolvlm-256m-int8.cellm
models/gemma-3-1b-it-int8/: README.md
models/gemma-4-2p3b-it-litert/: README.md
models/gemma-4-E2B-it-quanto-int4/: config.json
models/to-huggingface/gemma-3-1b-it-int8-v1/: README.md
models/to-huggingface/gemma-4-E2B-it-int4-aggr-v5/: README.md
models/to-huggingface/qwen2.5-0.5b-int8-v1/: README.md
models/to-huggingface/smollm2-360m-int8-v1/: README.md
research/: qwen3.5-quantization.md
scratch/: add_shader.py  build_metal_rs  build_metal_rs.rs  check_dtype.rs  check_parity  check_parity.rs  cleanup.sh  dump_dtypes.py  dump_shapes.py  final_sweep  final_sweep.rs  fix_all.py  fix_all_6.py  fix_gemma_final  fix_gemma_final.rs  fix_matmul_order  fix_matmul_order.rs  fix_metal_caching  fix_metal_caching.rs  fix_metal_struct.py  fix_nones.py  fix_qwen  fix_qwen.py  fix_qwen.rs  fix_qwen_2  fix_qwen_2.rs  fix_qwen_3  fix_qwen_3.rs  fix_qwen_final  fix_qwen_final.py  fix_qwen_final.rs  fix_runners.py  fix_runners_final.py  generate_metal_rs  generate_metal_rs.rs  inspect_cellm.rb  inspect_f16.py  list_dtypes.rs  list_tensors.rs  optimize_qwen.py  (+16 more)
scripts/: build_xcframework.sh  compare_gemma4_audio.py  upload_to_hf.py
tests/: prompt_samples.json
tools/: convert_lfm.py  onnx_to_cellmd_gemma4_text.py
tools/bench/: Cargo.toml  run_all_models.sh  run_gemma4_mobile_profile.sh  run_llama32_gguf_compare.sh  run_llm_backend_matrix.sh
tools/bench/src/: main.rs
tools/convert/: Cargo.toml
tools/convert/src/: main.rs
tools/infer/: Cargo.toml  inspect_full_08b.txt
tools/infer/src/: main.rs
tools/metal-smoke/: Cargo.toml
tools/metal-smoke/src/: main.rs
tools/tflite-smoke/: Cargo.toml
tools/tflite-smoke/src/: main.rs
tools/vlm-onnx-infer/: Cargo.toml
tools/vlm-onnx-infer/src/: main.rs
tools/vlm-smoke/: Cargo.toml
tools/vlm-smoke/scripts/: run_vlm_backend_compare.sh
tools/vlm-smoke/src/: audio_direct.rs  main.rs  vlm_direct.rs
