[workspace]
members = [
    "crates/*",
    "tools/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
smallvec = { version = "1.13", features = ["const_generics"] }
bytemuck = { version = "1.16", features = ["derive"] }
half = { version = "2.4", features = ["bytemuck"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'