[package]
name = "cellm-cache"
version = "0.1.0"
edition = "2021"
description = "KV block allocator, page table, and eviction policy for cellm."

[dependencies]
cellm-core = { path = "../cellm-core" }
half = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = "0.27"
objc = "0.2"
