[package]
name = "cellm-model"
version = "0.1.0"
edition = "2021"
description = "Model format, loader, tokenizer, and forward pass for cellm."

[dependencies]
cellm-core = { path = "../cellm-core" }
cellm-cache = { path = "../cellm-cache" }
cellm-kernels = { path = "../cellm-kernels" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }
