[package]
name = "cellm-model"
version = "0.1.0"
edition = "2021"
description = "Model format, loader, tokenizer, and forward pass for cellm."

[dependencies]
cellm-core = { path = "../cellm-core" }
cellm-cache = { path = "../cellm-cache" }
cellm-kernels = { path = "../cellm-kernels" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = "0.27.0"
[[example]]
name = "test_linear_parity"
path = "../../scratch/test_linear_parity.rs"

[[example]]
name = "test_qwen"
path = "../../scratch/test_qwen.rs"

