[package]
name = "convert"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "convert"
path = "src/main.rs"

[dependencies]
cellm-model = { path = "../../crates/cellm-model" }
anyhow      = { workspace = true }
clap        = { workspace = true }
serde_json  = { workspace = true }
log         = { workspace = true }
env_logger  = { workspace = true }
serde       = { workspace = true }
memmap2     = { workspace = true }
half        = { workspace = true }
bytemuck    = { workspace = true }
safetensors = "0.4"
